phaxbot/chat_overlay/web/static/styles.css
html, body {
	height: 100vh;
	margin: 0;
	min-height: 100vh;
	min-width: 100vw;
	overflow: hidden;
	padding: 0;
	width: 100vw;
}

body {
	background-color: #555;
	color: #fff;
	font-family: 'Unifont', Arial, Helvetica, sans-serif;
	font-size: 22px;
}

.messages.messages-list {
	bottom: 0;
	display: flex;
	flex-direction: column;
	margin: 0;
	padding: 0;
	position: absolute;
	width: 100%;
}

.message.message-item {
	background-color: rgba(0, 0, 0, 0.9);
	display: inline;
	flex-direction: column;
	line-height: 1.2;
	list-style: none;
	margin: 0.5rem;
	padding: 0;
	position: relative;
	width: 100%;
	left: 0;
}

.message.message-item.displaying {
	animation: 0.5s ease-out slide-in;
}

.message.message-item.expired {
	animation: 0.5s ease-in slide-out;
}

@keyframes slide-in {
	from {
		left: 100%;
	}
}

@keyframes slide-out {
	to {
		left: 100%;
	}
}

.message-item.message-username {
	font-weight: bold;
}

.message-badges.message-badge {
	max-height: 1.2rem;
	vertical-align: middle;
}

.message-text.message-emoji {
	max-height: 1.6rem;
	vertical-align: bottom;
}

.message-badges.message-badge {
	margin-right: 2px;
}

